6-anthos-install/acm-repos/root-config-repo/namespaces/boa/transactions/allow-front-transactions-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: frontend-allow
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      app: boa
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          networking/namespace: frontend
          app: boa
