6-anthos-install/acm-repos/root-config-repo/namespaces/boa/transactions/allow-transactions-sql-np-west.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
# accounts DB sql-boa-usw1-01
metadata:
  name: allow-sql-west
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 3307
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 172.31.1.2/32
    - ipBlock:
        cidr: 172.31.2.12/32
    - ipBlock:
        cidr: 172.31.2.5/32
    - ipBlock:
        cidr: 172.31.2.9/32
    - ipBlock:
        cidr: 10.16.64.0/24
    ports:
    - port: 3307
