6-anthos-install/acm-repos/root-config-repo/namespaces/boa/transactions/frontend-auth-po.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "transactions-writer"
spec:
  selector:
    matchLabels:
      app: boa
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/frontend/sa/frontend"]
    to:
    - operation:
        methods: ["POST","GET","DELETE","PATCH", "PUT"]
